# typeson-registry

## Version 1.0.0

- Fix: Use new `Typeson.toStringTag` and `Typeson.hasConstructorOf` to
    get cross-frame/cross-module class detection (replacing `constructor`
    and `instanceof` checks)

- Fix (RegExp): Get `regexp` type to work properly with `multiline`
- Fix (RegExp): Add `unicode` and `sticky` flag support for cloning
- Fix (undefined/sparseUndefined): Label `undefined` at root as regular
    `undefined` rather than `sparseUndefined` (will rely on update to
    `typeson`)
- Fix (SCA): Remove `Proxy` from list of structured clone throwing to throw
    as not available as such
- Fix (DataView): Get `dataview` to properly encode and decode `buffer`
    property
- Fix (ImageData): Get `imagedata` type to work properly (as `data` is not
    an array proper and length is on prototype, the object iteration
    will not preserve); fix by converting to array and reconstructing
    `Uint8ClampedArray` during revival)
- Fix (TypedArrays): For sake of TypedArrays, update to patched
    `base64-arraybuffer`

- Enhancement: Add cloneable type with test (detects/utilizes
    `__cloneEncapsulate` and `__cloneRevive` methods on an object)
- Enhancement: Add resurrectable type with test (resurrects non-plain
    objects, functions, and symbols to the exact instance, assuming the
    same session/environment)
- Enhancement: Add `ImageBitmap` type (with sync and async revival)
- Enhancement: Add `File`, `Blob`, and `FileList` types (with sync and
    async replacement/encapsulation)
- Enhancement: Add `user-objects` type and utilize in structured cloning
    to allow for non-plain user objects to be cloned; add test
- Enhancement: Add `nonbuiltin-ignore` type to roughly detect non-builtin
    objects and avoid adding them as properties
- Enhancement (minor): Check `typeof` for functions in SCA since can avoid
    false positives

- Refactoring: Rely on now Typeson-built-in `isUserObject`