@@ -2,6 +2,9 @@ var Typeson;
 if (Typeson === undefined) { Typeson = require('typeson'); }
 Typeson.types = {};
 Typeson.presets = {};
+Typeson.types.Infinity = require('./types/Infinity.js');
+Typeson.types.NaN = require('./types/NaN.js');
+Typeson.types.NegativeInfinity = require('./types/NegativeInfinity.js');
 Typeson.types.arraybuffer = require('./types/arraybuffer.js');
 Typeson.types.blob = require('./types/blob.js');
 Typeson.types.cloneable = require('./types/cloneable.js');
@@ -20,7 +23,6 @@ Typeson.types.primitiveObjects = require('./types/primitive-objects.js');
 Typeson.types.regexp = require('./types/regexp.js');
 Typeson.types.resurrectable = require('./types/resurrectable.js');
 Typeson.types.set = require('./types/set.js');
-Typeson.types.specialNumbers = require('./types/special-numbers.js');
 Typeson.types.typedArraysSocketio = require('./types/typed-arrays-socketio.js');
 Typeson.types.typedArrays = require('./types/typed-arrays.js');
 Typeson.types.undefined = require('./types/undefined.js');
@@ -29,6 +31,7 @@ Typeson.presets.builtin = require('./presets/builtin.js');
 Typeson.presets.postMessage = require('./presets/post-message.js');
 Typeson.presets.socketio = require('./presets/socketio.js');
 Typeson.presets.sparseUndefined = require('./presets/sparse-undefined.js');
+Typeson.presets.specialNumbers = require('./presets/special-numbers.js');
 Typeson.presets.structuredCloningThrowing = require('./presets/structured-cloning-throwing.js');
 Typeson.presets.structuredCloning = require('./presets/structured-cloning.js');
 Typeson.presets.undefined = require('./presets/undefined.js');
