@@ -1,0 +1,5 @@
+module.exports = [
+    require('../types/NaN'),
+    require('../types/Infinity'),
+    require('../types/NegativeInfinity')
+];
