@@ -1,0 +1,5 @@
+exports.Infinity = [
+    function (x) { return x === Infinity; },
+    function (n) { return 'Infinity'; },
+    function (s) { return Infinity;}
+];
