@@ -1,0 +1,5 @@
+exports.NaN = [
+    function (x) { return typeof x === 'number' && isNaN(x); },
+    function (n) { return 'NaN' },
+    function (s) { return NaN;}
+];
